fix broken layout for styleguide icons tab

--- a/public/sass/pages/_styleguide.scss
+++ b/public/sass/pages/_styleguide.scss
@@ -22,7 +22,7 @@
 }
 
 .style-guide-icon-list {
-  font-size: 2em;
+  font-size: 1.8em;
   text-align: center;
 }
 
